assets/css/style.css
/* ... */
.copy-code-button {
    position: absolute;
    z-index: 2;
    right: 0;
    top: 0;
    font-size: 13px;
    font-weight: 700;
    line-height: 14px;
    letter-spacing: 0.5px;
    width: 65px;
    color: #232326;
    background-color: #7f7f7f;
    border: 1.25px solid #232326;
    border-radius: 0 4px 0 4px;
    white-space: nowrap;
    padding: 4px 4px 5px 4px;
    margin: 0 0 0 1px;
    cursor: pointer;
    opacity: 0.6;
}
  
.copy-code-button:hover,
.copy-code-button:focus,
.copy-code-button:active,
.copy-code-button:active:hover {
    color: #222225;
    background-color: #b3b3b3;
    opacity: 0.8;
}
  
.copyable-text-area {
    position: absolute;
    height: 0;
    z-index: -1;
    opacity: .01;
}
  
/*=================================================================
    Tags
=================================================================*/
.tagContainer{
    margin: 16px
}


.tags {
    margin: 16px 0 0 0;
    background-color: #00fff9;
    border-radius: 8px;
    padding: 0.2em;
}

.tags:hover {
    background-color: #046293;
}


/*=================================================================
    Navigation
=================================================================*/
.navigation {
    background-color: #040b1e;
    margin-top: 10px;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 8px;
    font-size: 20px;
    font-weight: 700;
    font-family: "BlackOpsOne", sans-serif;
}

.navbar-dark .navbar-nav .active>.nav-link,
.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .nav-link.show,
.navbar-dark .navbar-nav .show>.nav-link {
    color: #040b1e;
}

.navbar-toggler:focus {
    outline: 0;
}

.dropdown-menu {
    color: #fff;
    background-color: #040b1e;
    border: 1px solid #57cbcc;
}   

.dropdown-item {
    color: rgba(255,255,255,.75);
}

.dropdown-item:focus, .dropdown-item:hover {
    color: #f8f9fa;
    text-decoration: none;
    background-color: #0f1e31;
}

.bg-1 {
    background-repeat: no-repeat;
    background-size: cover;
}

.bg-2 {
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

.hero-area {
    background-size: cover;
    height: 100vh;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-area:before {
    content: '';
    background: rgba(0, 0, 0, 0.63);
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.hero-area .block {
    text-align: center;
    z-index: 99;
}

.hero-area .block .video-button {
    background: #fff;
    color: #57cbcc;
    display: inline-block;
    height: 60px;
    width: 60px;
    border-radius: 50px;
}

.hero-area .block .video-button i {
    line-height: 60px;
    font-size: 20px;
    margin-left: 3px;
}

.hero-area .block h1 {
    font-size: 90px;
    color: #fff;
    text-transform: capitalize;
    font-weight: 700;
    margin-bottom: 20px;
}

@media (max-width: 480px) {
    .hero-area .block h1 {
        font-size: 60px;
    }
}

.hero-area .block p {
    color: #fff;
    font-size: 20px;
    width: 70%;
    margin: 0 auto;
}

.hero-area .block .btn-transparent {
    margin-top: 40px;
    border-color: #fff;
    padding: 14px 50px;
    font-size: 18px;
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 1px;
}

.hero-area-video {
    height: 100vh;
    position: inherit !important;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-area-video .block {
    color: #fff;
    text-align: center;
}

.hero-area-video .block h1 {
    font-size: 60px;
    font-weight: 700;
    margin-bottom: 20px;
}

.hero-area-video .block p {
    color: #fff;
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: 3px;
    margin-bottom: 20px;
}

.hero-area-video .block .btn-main {
    margin-top: 20px;
}

.dark-bg {
    background: rgba(0, 0, 0, 0.76);
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: -1;
}


/*=================================================================
    To Top Button
=================================================================*/
#content {
    position: relative;
}

#topPerent {
    position: absolute;
	height: calc(100% - 120vh);
    top: 150vh;
	right: 0px;
	width: 65px;
	background-color: #0000;
}

#top {
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 92vh;
    background-color: #0cbcf2;
    box-shadow: 2px 2px 2px black;
    padding: 5px 5px 16px 5px;
    border: 1px solid #6bffec;
    border-radius: 50%;
    font-size: 28px;
    display: inline-block;
    height: 38px;
    width: 38px;
    text-align: center;
    z-index: 5;
    
}


/*=================================================================
    Banner
=================================================================*/
.hero-area {
    background-size: cover;
    background-position: bottom left;
    height: 100vh;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-area:before {
    content: '';
    background: rgba(0, 0, 0, 0.63);
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.hero-area .block {
    text-align: center;
    z-index: 99;
}

.hero-area .block .video-button {
    background: #fff;
    color: #57cbcc;
    display: inline-block;
    height: 60px;
    width: 60px;
    border-radius: 50px;
}

.hero-area .block .video-button i {
    line-height: 60px;
    font-size: 20px;
    margin-left: 3px;
}

.hero-area .block h1 {
    font-size: 90px;
    color: #fff;
    text-transform: capitalize;
    font-weight: 700;
    margin-bottom: 20px;
}

@media (max-width: 480px) {
    .hero-area .block h1 {
        font-size: 60px;
    }
}

.hero-area .block p {
    color: #fff;
    font-size: 20px;
    width: 70%;
    margin: 0 auto;
}
/* ... */

